--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,9 +7,18 @@
 # If you deploy your application to several instances be sure to use the same key!
 application.secret="_^rcJH1vNrX3?CUEl0hPrS0T^Ap@p=n`kM_PneNG;p]/=:w9AiN]fAcNg`3oXI=r"
 
+
 # The application languages
 # ~~~~~
 application.langs="en"
+
+# Thrid party urls
+nextbus.root="http://webservices.nextbus.com/service/publicXMLFeed"
+nextbus.agencylist=${nextbus.root}"?command=agencyList"
+
+
+# External http call settings
+external.timeout=3000
 
 # Global object class
 # ~~~~~
@@ -35,7 +44,7 @@ application.langs="en"
 #
 db.default.driver=org.h2.Driver
 db.default.url="jdbc:h2:mem:test;DB_CLOSE_DELAY=-1"
-# db.default.user=sa
+# db.default.user=
 # db.default.password=""
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
