--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,6 +20,11 @@ nextbus.agencylist=${nextbus.root}"?command=agencyList"
 # External http call settings
 external.timeout=3000
 
+# Geographic and Commen sense related settings
+geo.walkspeed=1.4
+geo.busspeed=20
+geo.walktime=300
+
 # Global object class
 # ~~~~~
 # Define the Global object class for this application.
