More test files

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,7 @@ application.langs="en"
 # Thrid party urls
 nextbus.root="http://webservices.nextbus.com/service/publicXMLFeed"
 nextbus.agencylist=${nextbus.root}"?command=agencyList"
-
+nextbus.routelist=${nextbus.root}"?command=routeList"
 
 # External http call settings
 external.timeout=3000
