Modify ExternalCallService API

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,6 +16,7 @@ application.langs="en"
 nextbus.root="http://webservices.nextbus.com/service/publicXMLFeed"
 nextbus.agencylist=${nextbus.root}"?command=agencyList"
 nextbus.routelist=${nextbus.root}"?command=routeList"
+nextbus.routeconfig=${nextbus.root}"?command=routeConfig"
 
 # External http call settings
 external.timeout=3000
